Fixed image resizing on mobile

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -27,7 +27,6 @@ body {
   display: inline-table !important;
   margin-top: 16px;
   height: 400px;
-  width: 720px;
   max-width: 720px;
 }
 
